--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-/* Global & mixed values */
+body {
+    font-family: Roboto, sans-serif;
+}
+
 .header,
+.header-bg,
 .landing,
+.landing-bg,
 .footer {
     background-color: #1f2937;
 }
@@ -15,10 +20,43 @@
     display: flex;
 }
 
+.header {
+    margin: 10px 50px 10px 50px;
+}
+
 .logo-name {
+    flex: 2;
     font-size: 24px;
     color: white
 }
+
 .header-links {
+    flex: 1;
     font-size: 18px;
+    align-items: center;
+    justify-content: space-around;
+    color: rgb(196, 196, 196);
+}
+
+.landing {
+    margin: 10px 50px 10px 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-info {
+    flex: 1;
+    color: white;
+}
+
+.header-image {
+    flex: 1;
+    background-color: #6d747d;
+    padding: 30px 0px 30px 60px;
+}
+
+.button-1 {
+    background-color: #3b82f6;
+    color: white;
+    border-radius: 5px;
 }
