--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Roboto, sans-serif;
 }
 
-/*Header css edits*/
+/*Header styling*/
 .header {
     display: flex;
     align-items: center;
@@ -26,7 +26,7 @@ body {
     color: #a1a6ad;
 }
 
-/*Above the fold css changes*/
+/*Above the fold styling*/
 .landing {
     display: flex;
     align-items: center;
@@ -65,4 +65,98 @@ body {
     background-color: #a1a6ad;
     text-align: center;
     padding: 80px 0px 80px 0px;
+}
+
+/*Info-grid styling*/
+.grid-header{
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    text-align: center;
+}
+
+.main-grid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 200px 100px 200px;
+}
+
+.grid-box {
+    height: 150px;
+    width: 150px;
+    margin: 20px 20px 20px 20px;
+}
+
+.empty {
+    border-style: solid;
+    border-color: #3b82f6;
+    border-radius: 10px;
+    height: 150px;
+    width: 150px;
+}
+
+.box-info {
+    text-align: center;
+}
+
+/*Quotation styling*/
+.quotation {
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    padding: 70px 500px 70px 500px;
+}
+
+.quote {
+    text-align: center;
+    font-size: 36px;
+    color: #414a57;
+    font-style: italic;
+}
+
+.author {
+    text-align: end;
+    color: #1f2937;
+    font-weight: 700;
+}
+
+/*CTA styling*/
+.cta {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #3b82f6;
+    margin: 50px 500px 50px 500px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 10px;
+}
+
+.cta-header {
+    color: white;
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: -12px;
+}
+
+.cta-sub {
+    color: #e2e6ec;
+}
+
+.cta-button {
+    color: white;
+    background-color: #3b82f6;
+    border-style: solid;
+    border-color: white;
+    padding: 5px 20px 5px 20px;
+    border-radius: 5px;
+}
+
+/*Footer styling*/
+.footer {
+    color: white;
+    background-color: #1f2937;
+    text-align: center;
+    padding: 50px 200px 50px 200px;
 }
